br.usp.each.saeg.jaguar.core/src/main/resources/html-output/css/test-requirement-type-line-code-model.css
/* *******************************
 * Subtitles box
 * ******************************/

aside{
    width: 100%;
    display: grid;
    justify-items: right;
}

h2 {
    font-size: 1.2rem;
    width: 100%;
    text-align: center;
}


.colorSubtitles{
    width: auto;
    min-width: 30%;
    border: 0.063rem solid black;
    line-height: 1.2rem;
}

.colorSubtitles p{
    width: 100%;
    height: auto;
    margin: 0;
    padding: 0;
    display: flex;
}

.colorSubtitle {
    min-width: 20px;
    height: 1rem;
    align-self: center;
    margin: 0 0.1rem 0 0.2rem;
    padding: 0;
    border: 0.063rem solid black;
}

.suspiciousness-more-than-or-equal-75{
    background-color: #F6B7B7;
}

.suspiciousness-more-than-or-equal-50{
    background-color: #F2BC95;
}

.suspiciousness-more-than-or-equal-25{
    background-color: #E6C529;
}

.suspiciousness-below-25{
    background-color: #71e31b80;
}

/* *******************************
 * Code section
 * ******************************/

.code{
    overflow-x: scroll;
    line-height: 1rem !important;
}

code {
    width: 100%;
    height: 100%;
    margin: 0.313rem;
}

pre {
    margin-top: 15px;
    overflow:auto;
    border: 0.063rem solid black;
}

abbr{
    text-decoration: none;
    cursor: help;
}


#focusedLineParent{
    display: flexbox;
    font-weight: bolder;
}


#focusedLine{
    border-radius: 50%;
    width: 0.6rem;
    height: 0.6rem;
    margin-left: -0.70rem;
    margin-top: 0.2rem;
    position: sticky;
    background-color: red;
    border: 0.063rem solid black;
    z-index: 2;
    box-shadow: 0.063rem 0.063rem 0.063rem grey;
    display: inline-block;
}

